@@ -1,36 +1,51 @@
 package greencity.service;
 
+import com.google.maps.model.AddressComponentType;
+import com.google.maps.model.AddressType;
+import com.google.maps.model.GeocodingResult;
+import greencity.client.UserRemoteClient;
+import greencity.constant.AppConstant;
 import greencity.constant.ErrorMessage;
-import greencity.constant.LogMessage;
 import greencity.dto.PageInfoDto;
+import greencity.dto.PageableAdvancedDto;
 import greencity.dto.PageableDetailedDto;
+import greencity.dto.location.UserLocationDto;
+import greencity.dto.socialnetwork.SocialNetworkVO;
+import greencity.dto.user.CreateGreenCityUserDto;
+import greencity.dto.user.GreenCityUserProfileDtoResponse;
+import greencity.dto.user.UpdateUserCredoDto;
+import greencity.dto.user.UserAddRatingDto;
+import greencity.dto.user.UserCityDto;
 import greencity.dto.user.UserFilterDto;
 import greencity.dto.user.UserManagementVO;
+import greencity.dto.user.UserProfileDtoRequest;
 import greencity.dto.user.UserRoleDto;
 import greencity.dto.user.UserStatusDto;
 import greencity.dto.user.UserVO;
+import greencity.dto.user.UserVOAdvancedDto;
 import greencity.entity.User;
+import greencity.entity.UserLocation;
 import greencity.enums.EmailPreference;
 import greencity.enums.EmailPreferencePeriodicity;
 import greencity.enums.Role;
 import greencity.enums.UserStatus;
 import greencity.exception.exceptions.BadUpdateRequestException;
+import greencity.exception.exceptions.InsufficientLocationDataException;
 import greencity.exception.exceptions.LowRoleLevelException;
 import greencity.exception.exceptions.NotFoundException;
+import greencity.exception.exceptions.UserAlreadyExistsException;
 import greencity.exception.exceptions.WrongEmailException;
 import greencity.exception.exceptions.WrongIdException;
 import greencity.mapping.UserManagementVOMapper;
+import greencity.repository.UserLocationRepo;
 import greencity.repository.UserRepo;
-import java.sql.Timestamp;
-import java.time.LocalDateTime;
-import java.time.ZoneId;
-import java.time.ZonedDateTime;
-import java.util.Date;
+import greencity.repository.options.UserFilter;
+import java.util.Arrays;
 import java.util.List;
-import java.util.Optional;
+import java.util.Map;
+import java.util.function.Consumer;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
-import greencity.repository.options.UserFilter;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
@@ -39,6 +54,7 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -50,16 +66,12 @@ public class UserServiceImpl implements UserService {
     private final UserRepo userRepo;
     private final ModelMapper modelMapper;
     private final UserManagementVOMapper userManagementVOMapper;
+    private final UserRemoteClient userRemoteClient;
+    private final UserLocationRepo userLocationRepo;
+    private final GoogleApiService googleApiService;
+
     @Value("300000")
     private long timeAfterLastActivity;
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    public void save(UserVO userVO) {
-        userRepo.save(modelMapper.map(userVO, User.class));
-    }
 
     /**
      * {@inheritDoc}
@@ -75,49 +87,27 @@ public class UserServiceImpl implements UserService {
      * {@inheritDoc}
      */
     @Override
-    public UserVO findByEmail(String email) {
-        return userRepo.findByEmail(email)
-            .map(user -> modelMapper.map(user, UserVO.class))
-            .orElseThrow(() -> new WrongIdException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL + email));
+    public UserVO findNotDeactivatedByEmail(String email) {
+        return userRemoteClient.findNotDeactivatedByEmail(email)
+            .orElseThrow(() -> new WrongEmailException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL + email));
     }
 
     /**
      * {@inheritDoc}
      */
     @Override
-    public Optional<UserVO> findNotDeactivatedByEmail(String email) {
-        Optional<User> notDeactivatedByEmail = userRepo.findNotDeactivatedByEmail(email);
-        return Optional.of(modelMapper.map(notDeactivatedByEmail, UserVO.class));
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    public Long findIdByEmail(String email) {
-        log.info(LogMessage.IN_FIND_ID_BY_EMAIL, email);
-        return userRepo.findIdByEmail(email)
-            .orElseThrow(() -> new WrongEmailException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL));
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    public void updateUserLastActivityTime(Long userId, Date userLastActivityTime) {
-        userRepo.updateUserLastActivityTime(userId, userLastActivityTime);
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    public UserStatusDto updateStatus(Long id, UserStatus userStatus, String email) {
-        checkUpdatableUser(id, email);
-        accessForUpdateUserStatus(id, email);
+    public UserStatusDto updateStatus(Long id, UserStatus userStatus, Long currentUserId) {
+        checkUpdatableUser(id, currentUserId);
+        accessForUpdateUserStatus(id, currentUserId);
         UserVO userVO = findById(id);
         userVO.setUserStatus(userStatus);
-        userRepo.updateUserStatus(id, String.valueOf(userStatus));
+
+        UserStatusDto userStatusDto = UserStatusDto.builder()
+            .id(id)
+            .userStatus(userStatus)
+            .build();
+
+        userRemoteClient.updateUserStatus(userStatusDto);
         return modelMapper.map(userVO, UserStatusDto.class);
     }
 
@@ -126,31 +116,25 @@ public class UserServiceImpl implements UserService {
      *
      * @param id   {@link UserVO} id.
      * @param role {@link Role} for user.
-     * @return {@link UserRoleDto}
-     * @deprecated updates like this on User entity should be handled in
-     *             GreenCityUser via RestClient.
+     * @return {@link UserRoleDto} updates like this on User entity should be
+     *         handled in GreenCityUser via RestClient.
      */
-    @Deprecated
     @Override
     public UserRoleDto updateRole(Long id, Role role, String email) {
-        checkUpdatableUser(id, email);
-        User user = userRepo.findById(id)
+        Map<String, String> body = Map.of("role", role.name());
+        return userRemoteClient.updateUserRole(id, body)
             .orElseThrow(() -> new WrongIdException(ErrorMessage.USER_NOT_FOUND_BY_ID + id));
-        user.setRole(role);
-        userRepo.save(user);
-        return modelMapper.map(user, UserRoleDto.class);
     }
 
     /**
      * Method which check that, if admin/moderator update role/status of himself,
      * then throw exception.
      *
-     * @param id    id of updatable user.
-     * @param email email of admin/moderator.
+     * @param id            id of updatable user.
+     * @param currentUserId id of current user.
      */
-    protected void checkUpdatableUser(Long id, String email) {
-        UserVO user = findByEmail(email);
-        if (id.equals(user.getId())) {
+    protected void checkUpdatableUser(Long id, Long currentUserId) {
+        if (id.equals(currentUserId)) {
             throw new BadUpdateRequestException(ErrorMessage.USER_CANT_UPDATE_HIMSELF);
         }
     }
@@ -159,11 +143,11 @@ public class UserServiceImpl implements UserService {
      * Method which check that, if moderator trying update status of admins or
      * moderators, then throw exception.
      *
-     * @param id    id of updatable user.
-     * @param email email of admin/moderator.
+     * @param id            id of updatable user.
+     * @param currentUserId email of current user.
      */
-    private void accessForUpdateUserStatus(Long id, String email) {
-        UserVO user = findByEmail(email);
+    private void accessForUpdateUserStatus(Long id, Long currentUserId) {
+        UserVO user = findById(currentUserId);
         if (user.getRole() == Role.ROLE_MODERATOR) {
             Role role = findById(id).getRole();
             if ((role == Role.ROLE_MODERATOR) || (role == Role.ROLE_ADMIN)) {
@@ -177,18 +161,11 @@ public class UserServiceImpl implements UserService {
      */
     @Override
     public boolean checkIfTheUserIsOnline(Long userId) {
-        if (userRepo.findById(userId).isEmpty()) {
-            throw new WrongIdException(ErrorMessage.USER_NOT_FOUND_BY_ID + userId);
+        if (userId == null) {
+            throw new WrongIdException(ErrorMessage.USER_ID_NULL);
         }
-        Optional<Timestamp> lastActivityTime = userRepo.findLastActivityTimeById(userId);
-        if (lastActivityTime.isPresent()) {
-            LocalDateTime userLastActivityTime = lastActivityTime.get().toLocalDateTime();
-            ZonedDateTime now = ZonedDateTime.now();
-            ZonedDateTime lastActivityTimeZDT = ZonedDateTime.of(userLastActivityTime, ZoneId.systemDefault());
-            long result = now.toInstant().toEpochMilli() - lastActivityTimeZDT.toInstant().toEpochMilli();
-            return result <= timeAfterLastActivity;
-        }
-        return false;
+
+        return userRemoteClient.checkIfTheUserIsOnline(userId);
     }
 
     /**
@@ -196,12 +173,9 @@ public class UserServiceImpl implements UserService {
      */
     @Override
     public String getInitialsById(Long userId) {
-        Optional<User> optionalUser = userRepo.findById(userId);
-        if (optionalUser.isEmpty()) {
-            throw new WrongIdException(ErrorMessage.USER_NOT_FOUND_BY_ID + userId);
-        }
-        UserVO userVO = modelMapper.map(optionalUser.get(), UserVO.class);
-        String name = userVO.getName();
+        User user = userRepo.findById(userId)
+            .orElseThrow(() -> new WrongIdException(ErrorMessage.USER_NOT_FOUND_BY_ID + userId));
+        String name = user.getName();
         String initials = name.contains(" ") ? String.valueOf(name.charAt(0))
             .concat(String.valueOf(name.charAt(name.indexOf(" ") + 1)))
             : String.valueOf(name.charAt(0));
@@ -215,7 +189,7 @@ public class UserServiceImpl implements UserService {
     public List<UserVO> getSixFriendsWithTheHighestRating(Long userId) {
         return userRepo.getSixFriendsWithTheHighestRating(userId).stream()
             .map(user -> modelMapper.map(user, UserVO.class))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
@@ -223,7 +197,10 @@ public class UserServiceImpl implements UserService {
      */
     @Override
     public void updateEventOrganizerRating(Long eventOrganizerId, Double rate) {
-        userRepo.updateUserEventOrganizerRating(eventOrganizerId, rate);
+        int updatedRows = userRepo.updateUserEventOrganizerRating(eventOrganizerId, rate);
+        if (updatedRows == 0) {
+            throw new WrongIdException(ErrorMessage.USER_NOT_FOUND_BY_ID + eventOrganizerId);
+        }
     }
 
     /**
@@ -251,7 +228,7 @@ public class UserServiceImpl implements UserService {
     @Override
     public void updateUserRating(Long userId, Double rating) {
         if (userRepo.findById(userId).isEmpty()) {
-            throw new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_ID + userId);
+            throw new WrongIdException(ErrorMessage.USER_NOT_FOUND_BY_ID + userId);
         }
         userRepo.updateUserRating(userId, rating);
     }
@@ -271,9 +248,7 @@ public class UserServiceImpl implements UserService {
      */
     @Override
     public List<UserVO> findByEmails(List<String> emails) {
-        return userRepo.findAllByEmailIn(emails).stream()
-            .map(u -> modelMapper.map(u, UserVO.class))
-            .toList();
+        return userRemoteClient.findAllByEmailIn(emails);
     }
 
     /**
@@ -282,9 +257,203 @@ public class UserServiceImpl implements UserService {
     @Override
     public List<UserVO> getUsersIdByEmailPreferenceAndEmailPeriodicity(EmailPreference emailPreference,
         EmailPreferencePeriodicity periodicity) {
-        return userRepo.findAllByEmailPreferenceAndEmailPeriodicity(emailPreference.name(), periodicity.name()).stream()
-            .map(u -> modelMapper.map(u, UserVO.class))
-            .toList();
+        return userRemoteClient.findAllByEmailPreferenceAndEmailPeriodicity(emailPreference, periodicity);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public List<Long> getAllUserFriendsIds(Long userId) {
+        if (!userRepo.existsById(userId)) {
+            throw new WrongIdException(ErrorMessage.USER_NOT_FOUND_BY_ID + userId);
+        }
+        return userRepo.getAllUserFriendsIds(userId);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public PageableAdvancedDto<Long> getAllUserFriendsIds(Long userId, Pageable pageable) {
+        if (!userRepo.existsById(userId)) {
+            throw new WrongIdException(ErrorMessage.USER_NOT_FOUND_BY_ID + userId);
+        }
+        Page<Long> page = userRepo.getAllUserFriendsIds(userId, pageable);
+
+        return PageableAdvancedDto.<Long>builder()
+            .page(page.getContent())
+            .totalElements(page.getTotalElements())
+            .currentPage(pageable.getPageNumber())
+            .totalPages(page.getTotalPages())
+            .number(pageable.getPageNumber())
+            .hasPrevious(page.hasPrevious())
+            .hasNext(page.hasNext())
+            .first(page.isFirst())
+            .last(page.isLast())
+            .build();
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public List<Long> getSixFriendsIdsWithTheHighestRating(Long userId) {
+        if (!userRepo.existsById(userId)) {
+            throw new WrongIdException(ErrorMessage.USER_NOT_FOUND_BY_ID + userId);
+        }
+        return userRepo.getSixFriendsIdsWithTheHighestRating(userId);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public void setLocationForUser(Long userId, UserProfileDtoRequest userProfileDtoRequest) {
+        User user = findUserById(userId);
+        if (shouldSkipLocationUpdate(user, userProfileDtoRequest)) {
+            return;
+        }
+
+        if (user.getUserLocation() != null && (userProfileDtoRequest.getCoordinates().getLatitude() == null
+            || userProfileDtoRequest.getCoordinates().getLongitude() == null)) {
+            UserLocation old = user.getUserLocation();
+            old.getUsers().remove(user);
+            user.setUserLocation(null);
+        } else {
+            final AddressType[] addressTypes =
+                {AddressType.LOCALITY, AddressType.ADMINISTRATIVE_AREA_LEVEL_1, AddressType.COUNTRY};
+
+            GeocodingResult resultsUk = googleApiService.getLocationByCoordinates(
+                userProfileDtoRequest.getCoordinates().getLatitude(),
+                userProfileDtoRequest.getCoordinates().getLongitude(),
+                "uk", addressTypes);
+            GeocodingResult resultsEn = googleApiService.getLocationByCoordinates(
+                userProfileDtoRequest.getCoordinates().getLatitude(),
+                userProfileDtoRequest.getCoordinates().getLongitude(),
+                "en", addressTypes);
+            UserLocation userLocation = userLocationRepo.getUserLocationByLatitudeAndLongitude(
+                userProfileDtoRequest.getCoordinates().getLatitude(),
+                userProfileDtoRequest.getCoordinates().getLongitude()).orElse(new UserLocation());
+
+            /*
+             * check if user already has a location and if he is the only one assigned to
+             * this location. If user do not have a location check if such location is in
+             * database, if true then assign it to user, if not - add new location to
+             * database and assign it to user. If user has a location and this location
+             * belongs only to him, modify this location. If user has a location but there
+             * are more users assigned to this location, then create a new location for this
+             * user. If user inserted same location get his location and do not change
+             * anything.
+             */
+            if (user.getUserLocation() != null && user.getUserLocation().getUsers().size() == 1) {
+                if (userLocation.getId() != null && user.getUserLocation() != userLocation) {
+                    UserLocation deleteLocation = user.getUserLocation();
+                    user.setUserLocation(userLocation);
+                    userLocationRepo.delete(deleteLocation);
+                } else {
+                    userLocation = user.getUserLocation();
+                }
+            } else if (user.getUserLocation() != null && user.getUserLocation().getUsers().size() > 1) {
+                UserLocation old = user.getUserLocation();
+                old.getUsers().remove(user);
+            }
+            initializeGeoCodingResults(initializeUkrainianGeoCodingResult(userLocation), resultsUk);
+            initializeGeoCodingResults(initializeEnglishGeoCodingResult(userLocation), resultsEn);
+            userLocation.setLatitude(userProfileDtoRequest.getCoordinates().getLatitude());
+            userLocation.setLongitude(userProfileDtoRequest.getCoordinates().getLongitude());
+            userLocation = userLocationRepo.save(userLocation);
+            user.setUserLocation(userLocation);
+            userRepo.save(user);
+        }
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public Double findUserRating(Long userId) {
+        if (!userRepo.existsById(userId)) {
+            throw new WrongIdException(ErrorMessage.USER_NOT_FOUND_BY_ID + userId);
+        }
+        return userRepo.findRatingById(userId);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public void increaseUserRating(UserAddRatingDto userAddRatingDto) {
+        User user = findUserById(userAddRatingDto.getId());
+        user.setRating(user.getRating() + userAddRatingDto.getRating());
+        userRepo.save(user);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public UserCityDto findAllUsersCities(Long userId) {
+        return findUserLocation(userId, UserCityDto.class);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public UserLocationDto findUserLocationDtoByUserId(Long userId) {
+        return findUserLocation(userId, UserLocationDto.class);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public void updateUserCredo(UpdateUserCredoDto updateUserCredoDto) {
+        userRepo.updateUserCredo(updateUserCredoDto.userId(), updateUserCredoDto.userCredo());
+    }
+
+    private boolean shouldSkipLocationUpdate(User user, UserProfileDtoRequest userProfileDtoRequest) {
+        return user.getUserLocation() == null
+            && (userProfileDtoRequest.getCoordinates().getLatitude() == null
+                || userProfileDtoRequest.getCoordinates().getLongitude() == null);
+    }
+
+    private void initializeGeoCodingResults(Map<AddressComponentType, Consumer<String>> initializedMap,
+        GeocodingResult geocodingResult) {
+        checkGeocodingResultContainsAllInformation(geocodingResult, initializedMap.size());
+        initializedMap
+            .forEach((key, value) -> Arrays.stream(geocodingResult.addressComponents)
+                .forEach(addressComponent -> Arrays.stream(addressComponent.types)
+                    .filter(componentType -> componentType.equals(key))
+                    .forEach(componentType -> value.accept(addressComponent.longName))));
+    }
+
+    private void checkGeocodingResultContainsAllInformation(GeocodingResult geocodingResult, int size) {
+        if (geocodingResult.addressComponents.length < size) {
+            throw new InsufficientLocationDataException(ErrorMessage.INSUFFICIENT_LOCATION_DATA_FOUND);
+        }
+    }
+
+    private Map<AddressComponentType, Consumer<String>> initializeEnglishGeoCodingResult(
+        UserLocation userLocation) {
+        return Map.of(
+            AddressComponentType.LOCALITY, userLocation::setCityEn,
+            AddressComponentType.COUNTRY, userLocation::setCountryEn,
+            AddressComponentType.ADMINISTRATIVE_AREA_LEVEL_1, userLocation::setRegionEn);
+    }
+
+    private Map<AddressComponentType, Consumer<String>> initializeUkrainianGeoCodingResult(
+        UserLocation userLocation) {
+        return Map.of(
+            AddressComponentType.LOCALITY, userLocation::setCityUk,
+            AddressComponentType.COUNTRY, userLocation::setCountryUk,
+            AddressComponentType.ADMINISTRATIVE_AREA_LEVEL_1, userLocation::setRegionUk);
+    }
+
+    private User findUserById(Long id) {
+        return userRepo.findById(id)
+            .orElseThrow(() -> new WrongIdException(ErrorMessage.USER_NOT_FOUND_BY_ID + id));
     }
 
     private Pageable applyDefaultSorting(Pageable pageable) {
@@ -311,5 +480,115 @@ public class UserServiceImpl implements UserService {
         List<Integer> pageNumbers = IntStream.rangeClosed(startPage, endPage).boxed().collect(Collectors.toList());
 
         return new PageInfoDto(currentPage, totalPages, pageNumbers);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public UserVOAdvancedDto findByIdAdvanced(Long id) {
+        return userRepo.findById(id)
+            .map(user -> modelMapper.map(user, UserVOAdvancedDto.class))
+            .orElseThrow(() -> new WrongIdException(ErrorMessage.USER_NOT_FOUND_BY_ID + id));
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public String getSocialNetworkUrlByName(List<SocialNetworkVO> socialNetworks, String socialNetworkName) {
+        return socialNetworks.stream()
+            .map(SocialNetworkVO::getUrl)
+            .filter(url -> url.contains(socialNetworkName))
+            .findFirst()
+            .orElse(null);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public Boolean createUser(CreateGreenCityUserDto createUserDto) {
+        Long newUserId = createUserDto.getId();
+        if (userRepo.existsById(newUserId)) {
+            throw new UserAlreadyExistsException(HttpStatus.CONFLICT,
+                ErrorMessage.USER_ALREADY_REGISTERED_WITH_THIS_ID.formatted(newUserId));
+        }
+        String newUserEmail = createUserDto.getEmail();
+        if (userRepo.existsByEmail(newUserEmail)) {
+            throw new UserAlreadyExistsException(HttpStatus.CONFLICT,
+                ErrorMessage.USER_ALREADY_REGISTERED_WITH_THIS_EMAIL.formatted(newUserEmail));
+        }
+
+        User userToSave = User.builder()
+            .id(newUserId)
+            .name(createUserDto.getName())
+            .email(newUserEmail)
+            .profilePicturePath(createUserDto.getProfilePicturePath())
+            .rating(AppConstant.DEFAULT_RATING)
+            .eventOrganizerRating(AppConstant.DEFAULT_RATING)
+            .build();
+        userRepo.save(userToSave);
+        return true;
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public void updateUserProfilePicture(Long userId, String profilePicturePath) {
+        int updatedRows = userRepo.updateUserProfilePictureByUserId(userId, profilePicturePath);
+        if (updatedRows == 0) {
+            throw new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_ID + userId);
+        }
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public void updateUserName(Long userId, String userName) {
+        int updatedRows = userRepo.updateUserName(userId, userName);
+        if (updatedRows == 0) {
+            throw new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_ID + userId);
+        }
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public List<GreenCityUserProfileDtoResponse> findGreenCityUserProfilesByUserIds(List<Long> userIds) {
+        var greenCityProfiles = userRepo.findGreenCityUserProfilesByUserIds(userIds);
+
+        int expectedSize = userIds.size();
+        int resultSize = greenCityProfiles.size();
+
+        if (resultSize < expectedSize) {
+            List<Long> resultIds = greenCityProfiles.stream()
+                .map(GreenCityUserProfileDtoResponse::getUserId)
+                .toList();
+            List<Long> notFoundIds = userIds.stream()
+                .filter(userId -> !resultIds.contains(userId))
+                .toList();
+            String notFoundIdsStr = notFoundIds.stream().map(String::valueOf).collect(Collectors.joining(", "));
+            throw new NotFoundException(ErrorMessage.USERS_NOT_FOUND_BY_IDS + notFoundIdsStr);
+        }
+
+        greenCityProfiles.forEach(greenCityProfile -> userLocationRepo.findAllUsersCities(greenCityProfile.getUserId())
+            .ifPresent(userLocation -> {
+                UserLocationDto userLocationDto = modelMapper.map(userLocation, UserLocationDto.class);
+                greenCityProfile.setUserLocationDto(userLocationDto);
+            }));
+        return greenCityProfiles;
+    }
+
+    private <T> T findUserLocation(Long userId, Class<T> clazz) {
+        if (!userRepo.existsById(userId)) {
+            throw new WrongIdException(ErrorMessage.USER_NOT_FOUND_BY_ID + userId);
+        }
+        UserLocation userLocation = userLocationRepo.findAllUsersCities(userId)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_DID_NOT_SET_ANY_CITY));
+        return modelMapper.map(userLocation, clazz);
     }
 }
